# snakegame

./: CMakeLists.txt
include/: apple.h  event_manager.h  game.h  message_box.h  snake.h  wall.h  window.h  world.h
src/: apple.cpp  event_manager.cpp  game.cpp  main.cpp  message_box.cpp  snake.cpp  wall.cpp  window.cpp  world.cpp
